semantic and video sections added

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <h1>This is my practice project</h1>
     <section class="ordered-list">
         <h2>Some Common HTML Tags</h2>
-        <ol>
-            <li class="inline"><h2>Inline tags</h2>anchor tag - a <br> bold tag - b <br> italic tag - i <br> underline tag - u <br> span tag - span <br> image tag - img <br> subscript tag - sub</li>
-            <li class="block"><h2>Block tags</h2> paragraph tag - p <br> heading tags  h1-h6 <br> list tag - li <br> divisiton tag - div <br> horizontal line tag - hr <br> ordered list tag - ol <br> unordered list tag - ul <br>  </li>
-            <li class="inline-block"><h2>Inline-block tags</h2> button tag - button <br> input tag - input <br> select tag - select</li>
-        </ol>    
+        <div class="list-item">
+            <ol>
+                <li class="inline"><h2>Inline tags</h2>anchor tag - &lt;a href=""&gt;--&lt;&sol;a&gt; <br> bold tag - &lt;b&gt;--&lt;&sol;b&gt; <br> italic tag - &lt;i&gt;--&lt;&sol;i&gt;<br> underline tag - &lt;u&gt;--&lt;&sol;u&gt; <br> span tag - &lt;span&gt;--&lt;&sol;span&gt; <br> image tag - &lt;img src=""&gt; <br> subscript tag - &lt;sub&gt;--&lt;&sol;sub&gt;</li>
+                <li class="block"><h2>Block tags</h2> paragraph tag - &lt;p&gt;--&lt;&sol;p&gt; <br> heading tags  &lt;h1&gt;--&lt;&sol;h1&gt; to &lt;h6&gt;--&lt;&sol;h6&gt; <br> list tag - &lt;li&gt;--&lt;&sol;li&gt; <br> divisiton tag - &lt;div&gt;--&lt;&sol;div&gt; <br> horizontal line tag - &lt;hr&gt; <br> ordered list tag - &lt;ol&gt;--&lt;&sol;ol&gt; <br> unordered list tag - &lt;ul&gt;--&lt;&sol;ul&gt; </li>
+                <li class="inline-block"><h2>Inline-block tags</h2> button tag - &lt;button&gt;--&lt;&sol;button&gt; <br> input tag - &lt;input&gt;--&lt;&sol;input&gt; <br> select tag - &lt;select&gt;--&lt;&sol;select&gt;</li>
+            </ol>
+        </div>
+
+    
     </section>
     <section class="table">
         <h2>Friends</h2>
@@ -64,8 +68,15 @@
             </tr>
         </table>
     </section>
-    <section></section>
-    <section></section>
+    <section class="semantic">
+        <h2>Semantic Tags</h2>
+        <p>Semantic tags are tags which describes the meaning of the other tags to the developer and the browser.</p>
+        <p>HTML has many semantic tags. Some of them are <br> main tag: &lt;main&gt;--&lt;&sol;main&gt; <br> section tag &lt;section&gt;--&lt;&sol;section&gt; <br> article tag: &lt;article&gt;--&lt;&sol;article&gt; <br> header tag: &lt;header&gt;--&lt;&sol;header&gt; <br> footer tag: &lt;footer&gt;--&lt;&sol;footer&gt; <br> </p>
+    </section>
+    <section class="youtube-video">
+        <h2>Youtube Video Autoplay</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8e5RT4D6S7U?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
     <section></section>
     <section></section>
 </body>
