fontawesome icons  added with their links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Practice Project</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/3980442370.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>This is my practice project</h1>
@@ -77,7 +78,11 @@
         <h2>Youtube Video Autoplay</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8e5RT4D6S7U?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
-    <section></section>
+    <section class="font-awesome">
+        <h2>Here are my social links</h2>
+        <a href="https://www.youtube.com/c/EnglishMoja"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100073750514545"><i class="fab fa-facebook"></i></a>
+    </section>
     <section></section>
 </body>
 </html>
