--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
     <script src="https://kit.fontawesome.com/3980442370.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>This is my practice project</h1>
-    <section class="ordered-list">
+    <header>
+        <nav>
+            <ul>
+                <li><a class="active" href="#ordered-list">HTML Tags</a></li>
+                <li><a class="active" href="#friends">Friends</a></li>
+                <li><a class="active" href="#semantic">Semantic Tag</a></li>
+                <li><a class="active" href="#youtube-video">Youtube Video</a></li>
+                <li><a class="active" href="#font-awesome">Contact</a></li>
+            </ul>
+        </nav>
+        <h1>This is my practice project</h1>
+    </header>
+    <section id="ordered-list">
         <h2>Some Common HTML Tags</h2>
         <div class="list-item">
             <ol>
@@ -22,7 +33,7 @@
 
     
     </section>
-    <section class="table">
+    <section id="friends">
         <h2>Friends</h2>
         <table>
             <tr id="main">
@@ -69,17 +80,17 @@
             </tr>
         </table>
     </section>
-    <section class="semantic">
+    <section id="semantic">
         <h2>Semantic Tags</h2>
         <p>Semantic tags are tags which describes the meaning of the other tags to the developer and the browser.</p>
         <p>HTML has many semantic tags. Some of them are <br> main tag: &lt;main&gt;--&lt;&sol;main&gt; <br> section tag &lt;section&gt;--&lt;&sol;section&gt; <br> article tag: &lt;article&gt;--&lt;&sol;article&gt; <br> header tag: &lt;header&gt;--&lt;&sol;header&gt; <br> footer tag: &lt;footer&gt;--&lt;&sol;footer&gt; <br> </p>
     </section>
-    <section class="youtube-video">
-        <h2>Youtube Video Autoplay</h2>
+    <section id="youtube-video">
+        <h2>Youtube Video</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8e5RT4D6S7U?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
-    <section class="font-awesome">
-        <h2>Here are my social links</h2>
+    <section id="font-awesome">
+        <h2>Contact Me!</h2>
         <a href="https://www.youtube.com/c/EnglishMoja"><i class="fab fa-youtube"></i></a>
         <a href="https://www.facebook.com/profile.php?id=100073750514545"><i class="fab fa-facebook"></i></a>
     </section>
